--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,20 @@
       content="Website for Glimt | A digital disposable camera"
     />
     <link rel="apple-touch-icon" href="/images/glimt-icon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,600&family=Roboto+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preload"
+      href="/assets/Poppins-Bold.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
