Added apple icon again

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/images/glimt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3a8385" />
     <meta
       name="description"
       content="Website for Glimt | A digital disposable camera"
     />
-    <link rel="apple-touch-icon" href="/images/glimt-icon.png" />
+    <link rel="apple-touch-icon" href="/images/glimt-apple-icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
