--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/images/glimt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3a8385" />
+    <meta name="theme-color" content="#317678" />
     <meta
       name="description"
       content="Website for Glimt | A digital disposable camera"
